src/components/badge/badge.scss
@import '../../style/internal/mdc-variables';

/**
 * @prop --badge-background-color: badge background color
 * @prop --badge-text-color: badge text color
 */


:host {
  display: block;
}

.badge-container {
    display: inline-block;
    font-size: pxToRem(11);
    min-width: pxToRem(20);
    height: pxToRem(20);
    border-radius: pxToRem(20);
    line-height: pxToRem(20);
    text-align: center;
    background-color:  var(--badge-background-color, #EEF1F5);
    color:  var(--badge-text-color, #7D899C);
    padding: 0 pxToRem(5);
    margin-left: pxToRem(4);
}

